force-app/main/default/objects/Krow__Proposal_Line__c/Krow__Proposal_Line__c.object-meta.xml
<CustomObject>
    <label>Proposal Line</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Proposal Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>