force-app/main/default/objects/Krow__Proposal_Line__c/fields/Krow__Bill_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Bill_Amount__c</fullName>
    <formula>Krow__Hours__c * Krow__Bill_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>