force-app/main/default/objects/Krow__Proposal_Line__c/fields/Krow__Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billing_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Type</label>
    <referenceTo>Krow__Billing_Type__c</referenceTo>
    <relationshipLabel>Proposal Lines</relationshipLabel>
    <relationshipName>Proposal_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>