force-app/main/default/objects/Krow__Proposal_Line__c/fields/Krow__Budgeted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Krow__Budgeted_Cost__c</fullName>
    <formula>(Krow__Hours__c * Krow__Cost_Rate__c) + (Krow__Fixed_Cost__c * Krow__Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budgeted Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>