force-app/main/default/objects/Krow__Proposal_Line__c/fields/Krow__Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Cost_Amount__c</fullName>
    <formula>(Krow__Hours__c * Krow__Cost_Rate__c) +  Krow__Fixed_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>