force-app/main/default/objects/Krow__Proposal_Line__c/fields/Krow__Fixed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Krow__Fixed_Cost__c</fullName>
    <description>It is a Unit Fixed Cost and will be multiplied by the quantity to give Budgeted cost</description>
    <label>Fixed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>