force-app/main/default/objects/Krow__Proposal_Line__c/fields/Krow__Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin_Amount__c</fullName>
    <formula>Krow__Proposed_Amount__c - ( (Krow__Fixed_Cost__c *  Krow__Quantity__c) + ( Krow__Cost_Rate__c *  Krow__Hours__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>