force-app/main/default/objects/Krow__Proposal_Line__c/fields/Krow__Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin_Percent__c</fullName>
    <formula>IF(OR(ISBLANK(Krow__Proposed_Amount__c), IF(Krow__Proposed_Amount__c = 0, TRUE, FALSE)), NULL, (( Krow__Proposed_Amount__c - Krow__Cost_Amount__c ) / Krow__Proposed_Amount__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>