force-app/main/default/objects/Krow__Proposal_Line__c/fields/Krow__Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Krow__Product_Family__c</fullName>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>