force-app/main/default/objects/Krow__Proposal_Line__c/fields/Krow__Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Resource</label>
    <referenceTo>Krow__Project_Resources__c</referenceTo>
    <relationshipLabel>Proposal Lines</relationshipLabel>
    <relationshipName>Proposal_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>