force-app/main/default/objects/Krow__Proposal_Line__c/fields/Krow__Proposal__c.field-meta.xml
<CustomField>
    <fullName>Krow__Proposal__c</fullName>
    <label>Proposal</label>
    <referenceTo>Krow__Proposal__c</referenceTo>
    <relationshipLabel>Proposal Lines</relationshipLabel>
    <relationshipName>Proposal_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>