force-app/main/default/objects/Krow__Proposal_Line__c/fields/Krow__Proposed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Proposed_Amount__c</fullName>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>