force-app/main/default/objects/Krow__Proposal_Line__c/fields/Krow__Role__c.field-meta.xml
<CustomField>
    <fullName>Krow__Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>Krow__Krow_Role__c</referenceTo>
    <relationshipLabel>Proposal Lines</relationshipLabel>
    <relationshipName>Proposal_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>